rm direction for flagtile in app